# qnty

./: .gitignore  2025-08-29-please-create-a-unit-and-variable-for-time-in-cp.txt  ARCHITECTURE_TREE.md  ASME_PERFORMANCE_ANALYSIS.md  CARTESIAN_SOLVER_DESIGN.md  CLAUDE.md  COMPREHENSIVE_REFACTORING_ANALYSIS.md  FULL_MIGRATION_PLAN.md  HIERARCHY_SIMPLIFICATION_SUMMARY.md  PACKAGE_STRUCTURE_ANALYSIS.md  PREFIX_IMPLEMENTATION_PROPOSAL.md  PROPOSED_FILE_STRUCTURE.md  README.md  REFACTORING_PLAN.md  SOLVE_REFACTOR_PLAN.md  cache_test.py  chapter-2-solutions-7f9cf21b-daf8-4ca7-ae40-5494a3a05aa8.md  debug_actual_test.py  debug_all_equation_processing.py  debug_arithmetic_path.py  debug_canonicalization.py  debug_canonicalization_detailed.py  debug_delayed_resolution.py  debug_equation_creation.py  debug_exact_substitution.py  debug_flange_test.py  debug_full_problem.py  debug_h303_issue.py  debug_minimal_repro.py  debug_retrofit_order.py  debug_solver_issue.py  debug_symbol_collision.py  debug_test.py  debug_variable_issue.py  debug_variable_issue2.py  debug_with_logging.py  debug_wrap_operand.py  deep_profile_remaining.py  diagnose_missing_equations.py  generate_units.py  (+28 more)
.claude/: prompt.txt  settings.local.json
.github/: notes.txt
_backup_examples/: arithmetic_refactor_examples.py  code_quality_analysis_report.md  error_handling_examples.py  reconstruction_old.py
codegen/: cli.py
data/: absorbed_radiation_dose.md  prompt.txt  split_md_tables.py  units.md
docs/: API_REFERENCE.md  NAMING_IMPROVEMENTS_SUMMARY.md  README.md  TUTORIAL.md  VECTOR_API_IMPROVEMENTS.md  troubleshooting.md
examples/: _1_basic_conversions.py  angle_reference_demo.py  basic_use_demo.py  comparison_demo.py  composed_problem_demo.py  conversions_demo.py  fluent_typing_demo.py  force_vector_examples_with_reports.py  problem_2_2_example.py  problem_demo.py  select_match_example.py  select_variable_usage.py  simple_force_equilibrium.py  simple_problem_demo.py  solve_methods_demo.py  test_report_generation.py  unified_variable_demo.py  unit_conversion_demo.py  vector_equilibrium_examples.py  vector_equilibrium_with_diagram.py  verify_pdf_generation.py
reports/: composed_problem_report.md  composed_problem_report.tex  pipe_thickness_output_units.md  pipe_thickness_output_units.tex  pipe_thickness_report.md  pipe_thickness_report.tex  problem_2_2.md  problem_2_2.tex  (+3 more)
(+836 files in other folders)
